Classes:
  - Ranger gets a vehicle slot, all new vehicles are added to this category
    based on the simpler Air Raider vehicles.
  - Air Raider can equip anything in all three of his slots.

Weapons:
  - AF99-ST gets a 2.5x scope, increased clip capcity to 28,
    and reload time reduced to 2.5 seconds.
  - Fusion Blaster ZD can reload in the background. This takes 180 seconds.