@@ -3,3 +3,4 @@
 originals
 node_modules
 package-lock.json
+scratchpad
