@@ -9,7 +9,7 @@
     {
       "type": "int",
       "name": "AmmoAlive",
-      "value": 22
+      "value": 13
     },
     {
       "type": "string",
@@ -56,17 +56,17 @@
         {
           "type": "float",
           "name": "Red",
-          "value": 0.5
+          "value": 5
         },
         {
           "type": "float",
           "name": "Green",
-          "value": 1.5
+          "value": 100
         },
         {
           "type": "float",
           "name": "Blue",
-          "value": 1.25
+          "value": 100
         },
         {
           "type": "float",
@@ -78,12 +78,12 @@
     {
       "type": "int",
       "name": "AmmoCount",
-      "value": 160
+      "value": 10
     },
     {
       "type": "float",
       "name": "AmmoDamage",
-      "value": 120
+      "value": 6000
     },
     {
       "type": "float",
@@ -108,7 +108,7 @@
     {
       "type": "float",
       "name": "AmmoHitSizeAdjust",
-      "value": 1
+      "value": 0.5
     },
     {
       "type": "int",
@@ -128,12 +128,12 @@
     {
       "type": "float",
       "name": "AmmoSize",
-      "value": 0.12999999523162842
+      "value": 1.7999999523162842
     },
     {
       "type": "float",
       "name": "AmmoSpeed",
-      "value": 12
+      "value": 75
     },
     {
       "type": "ptr",
@@ -153,12 +153,12 @@
     {
       "type": "string",
       "name": "BaseAnimation",
-      "value": "assault"
+      "value": "sniper"
     },
     {
       "type": "string",
       "name": "ChangeAnimation",
-      "value": "assault_change1"
+      "value": "sniper_change1"
     },
     {
       "type": "float",
@@ -168,7 +168,7 @@
     {
       "type": "float",
       "name": "FireAccuracy",
-      "value": 0.05000000074505806
+      "value": 0
     },
     {
       "type": "int",
@@ -188,12 +188,12 @@
     {
       "type": "int",
       "name": "FireCount",
-      "value": 4
+      "value": 1
     },
     {
       "type": "int",
       "name": "FireInterval",
-      "value": 4
+      "value": 120
     },
     {
       "type": "ptr",
@@ -203,7 +203,7 @@
     {
       "type": "float",
       "name": "FireRecoil",
-      "value": 0.11999999731779099
+      "value": 0.800000011920929
     },
     {
       "type": "ptr",
@@ -211,16 +211,12 @@
       "value": [
         {
           "type": "int",
-          "value": 1
+          "value": 0
         },
         {
           "type": "string",
           "name": "SoundName",
-          "value": "weapon_Ranger_AF_AF20RA"
-        },
-        {
-          "type": "float",
-          "value": 0.7943000197410583
+          "value": "weapon_Ranger_SR_lysanderZ"
         },
         {
           "type": "float",
@@ -229,6 +225,10 @@
         {
           "type": "float",
           "value": 1
+        },
+        {
+          "type": "float",
+          "value": 2
         },
         {
           "type": "float",
@@ -239,12 +239,12 @@
     {
       "type": "int",
       "name": "FireSpreadType",
-      "value": 2
+      "value": 0
     },
     {
       "type": "float",
       "name": "FireSpreadWidth",
-      "value": 0.24
+      "value": 0
     },
     {
       "type": "int",
@@ -328,7 +328,7 @@
     {
       "type": "string",
       "name": "MuzzleFlash",
-      "value": "MuzzleFlash02"
+      "value": "MuzzleFlash01"
     },
     {
       "type": "ptr",
@@ -336,50 +336,50 @@
       "value": [
         {
           "type": "string",
-          "value": "マズルフラッシュパターン.dds"
+          "value": "マズルフラッシュ01.dds"
         },
         {
           "type": "float",
-          "value": 1.5
+          "value": 5
         },
         {
           "type": "float",
-          "value": 0.23999999463558197
-        },
-        {
-          "type": "float",
-          "value": 0
-        },
-        {
-          "type": "int",
-          "value": 8
-        },
-        {
-          "type": "float",
-          "value": 0.8999999761581421
-        },
-        {
-          "type": "float",
-          "value": 0.10000000149011612
-        },
-        {
-          "type": "int",
           "value": 1
+        },
+        {
+          "type": "float",
+          "value": 0.125
+        },
+        {
+          "type": "int",
+          "value": 10
+        },
+        {
+          "type": "float",
+          "value": 2.799999952316284
+        },
+        {
+          "type": "float",
+          "value": 0.30000001192092896
+        },
+        {
+          "type": "int",
+          "value": 4
         },
         {
           "type": "ptr",
           "value": [
             {
               "type": "float",
-              "value": 0.4000000059604645
+              "value": 0.10000000149011612
             },
             {
               "type": "float",
-              "value": 0.4000000059604645
+              "value": 2
             },
             {
               "type": "float",
-              "value": 0.800000011920929
+              "value": 2
             },
             {
               "type": "float",
@@ -396,12 +396,12 @@
     {
       "type": "float",
       "name": "Range",
-      "value": 250
+      "value": 975
     },
     {
       "type": "string",
       "name": "ReloadAnimation",
-      "value": "assault_reload2"
+      "value": "sniper_reload1"
     },
     {
       "type": "float",
@@ -411,7 +411,7 @@
     {
       "type": "int",
       "name": "ReloadTime",
-      "value": 120
+      "value": 360
     },
     {
       "type": "int",
@@ -419,9 +419,9 @@
       "value": 0
     },
     {
-      "type": "ptr",
+      "type": "float",
       "name": "SecondaryFire_Parameter",
-      "value": null
+      "value": 10
     },
     {
       "type": "int",
@@ -432,7 +432,7 @@
         2,
         3
       ],
-      "value": 0
+      "value": 1
     },
     {
       "type": "ptr",
@@ -455,15 +455,15 @@
             },
             {
               "type": "string",
-              "value": "weapon_Common_shell_9mm"
+              "value": "weapon_Common_shell_srifle"
             },
             {
               "type": "float",
-              "value": 0.1599999964237213
+              "value": 0.2199999988079071
             },
             {
               "type": "float",
-              "value": 0.699999988079071
+              "value": 0.800000011920929
             },
             {
               "type": "float",
@@ -496,11 +496,11 @@
           "value": [
             {
               "type": "string",
-              "value": "app:/HUD/Sight01.rab"
+              "value": "app:/HUD/sight05.rab"
             },
             {
               "type": "string",
-              "value": "Sight01.mdb"
+              "value": "sight05.mdb"
             }
           ]
         },
@@ -517,7 +517,7 @@
     {
       "type": "string",
       "name": "WeaponIcon",
-      "value": "app:/weapon/icon/AF20.dds"
+      "value": "app:/weapon/icon/raythunderz.dds"
     },
     {
       "type": "ptr",
@@ -528,23 +528,23 @@
           "value": [
             {
               "type": "string",
-              "value": "app:/Weapon/s_assault_AF20rar.rab"
+              "value": "app:/Weapon/s_sniper_raythunderZ.rab"
             },
             {
               "type": "string",
-              "value": "s_assault_AF20rar.mdb"
+              "value": "s_sniper_raythunderZ.mdb"
             }
           ]
         },
         {
           "type": "string",
-          "value": "app:/Weapon/s_assault_AF20rar.cas"
+          "value": "app:/Weapon/s_sniper_raythunderZ.cas"
         },
         {
           "type": "extra",
           "value": {
             "type": "MAB\u0000",
-            "data": "TUFCAA8AAAADAAAAAwADAAgAWAAkAAAAnAAAAOAAAABAAwAAAAABADwAAAABAAEAXAAAAAIAAQB8AAAAQAMAAEwDAAACAAAA8AAAACABAADgAAAAAAAAAGABAABGAwAAWgMAAAIAAABAAQAAIAEAADABAAAAAAAAYAEAAI4DAABaAwAAAgAAAFABAAAQAQAAAAEAAAAAAADYAQAAzAAAANwAAAB+AwAAAAAAAMwAAADcAAAAZAMAAAAAAADMAAAA3AAAAG4DAAABAAAAeAMAAAAAAAAAAAAAgAEAALq6uroAAAAAAAAAAAAAAAAAAIA/AAAAAAAAAAAZBJY+AACAPwAAAAAAAAAAkgoGPwAAgD8K16M8CtejPArXozwAAIA/zcxMPc3MTD3NzEw9AACAP5Vugz1t7R2/PTVCQAAAgD/FILA9nu8nvaabRD4AAIA/rkdhvfT91DwCKwc+AACAP1NHTwACAQAAAAAAACAAAAAAAAAAIAAAAAAAAAAgAAAAU0dPAAIBAAABAAAAIAAAAAEAAAAsAAAAAAAAADQAAAADAAAADAAAAB4AAAAIAAAAAAAAAG4AYQBtAGUAAAAh/yb/Ev8Q/zL/If8y/4OSq47tMPwwyTAAAFNHTwACAQAABAAAACAAAAAEAAAA4AAAAAAAAAAAAQAAAAAAAAMAAAAwAAAAAAAAAAMAAABIAAAAAAAAAAMAAABgAAAAAAAAAAMAAAB4AAAAAgAAAAQAAAAAAIA/AgAAAAQAAAAAAIA/AgAAAAQAAAAAAIA/AgAAAAQAAAAAAIC/AgAAAAQAAAAAAIC/AgAAAAQAAAAAAIC/AgAAAAQAAAAAAMC/AgAAAAQAAAAAAAA/AgAAAAQAAAAAAAAAAgAAAAQAAAAAAIC/AgAAAAQAAAAAAAAAAgAAAAQAAAAAAAAAIAAAAAAAAAAyAAAAAQAAAEQAAAACAAAAVgAAAAMAAAByAG8AdABhAHQAaQBvAG4AXwBtAGEAeAAAAHIAbwB0AGEAdABpAG8AbgBfAG0AaQBuAAAAdgBlAGwAbwBjAGkAdAB5AF8AbQBhAHgAAAB2AGUAbABvAGMAaQB0AHkAXwBtAGkAbgAAADAAMQAAAEkASwAAAGIAYQByAHIAZQBsAAAAYgBvAGQAeQAAAGYAaQByAGUAAABsAG8AYQBkAAAAcwBlAAAAcwB0AGEAbgBkAGIAeQAAAKyFooMAAGQAAAA="
+            "data": "TUFCAA8AAAADAAAAAwAEAAUAdAAkAAAAfAAAADABAAD8AwAAAAABADwAAAABAAEAXAAAAAIAAAB8AAAA/AMAAAgEAAACAAAAQAEAAFABAAAwAQAAAAAAAIABAAACBAAACAQAAAIAAABgAQAAUAEAAHABAAAAAAAAgAEAALwAAAAsAQAAYAQAAAAAAAC8AAAALAEAAEAEAAACAAAA3AAAACwBAAAoBAAAAgAAAPwAAAAsAQAAEgQAAAMAAABaBAAAAAAAAAAAAAAsAwAAWgQAAAAAAAAAAAAAAAIAAFoEAAAAAAAAAAAAAJQDAABaBAAAAAAoQgAAAACUAwAAWgQAAAAAAAAAAAAAxAIAAFoEAAAAAPBBAAAAAGACAABaBAAAAACgQgAAAACgAQAAurq6ugAAAAAAAAAAAAAAAAAAgD8AAAAAGy/dPajG2z8AAIA/CtejPArXozwK16M8AACAP0Jg5T2mm0S8lkOLPgAAgD+0fyi9tIHxvtzMPcAAAIA/U0dPAAIBAAAAAAAAIAAAAAAAAAAgAAAAAAAAACAAAABTR08AAgEAAAEAAAAgAAAAAQAAACwAAAAAAAAANAAAAAMAAAAPAAAAHgAAAAgAAAAAAAAAbgBhAG0AZQAAADP/Mv8y/yH/Of80/yj/Nf8u/yT/Jf8y/zr/y2lIMAAAAABTR08AAgEAAAEAAAAgAAAAAQAAACwAAAAAAAAANAAAAAMAAAAQAAAAHgAAAAgAAAAAAAAAbgBhAG0AZQAAADP/Mv8y/yH/Of80/yj/Nf8u/yT/Jf8y/zr/SjCNMFkwAABTR08AAgEAAAEAAAAgAAAAAQAAACwAAAAAAAAANAAAAAMAAAASAAAAHgAAAAgAAAAAAAAAbgBhAG0AZQAAADP/Mv8y/yH/Of80/yj/Nf8u/yT/Jf8y/zr/3jCwMLswwzDIMAAAU0dPAAIBAAABAAAAIAAAAAEAAAAsAAAAAAAAADQAAAADAAAAEwAAAB4AAAAIAAAAAAAAAG4AYQBtAGUAAAAz/zL/Mv8h/zn/NP8o/zX/Lv8k/yX/Mv86/94wsDDWU4ow+lFXMAAAAABTR08AAgEAAAEAAAAgAAAAAQAAACwAAAAAAAAANAAAAAMAAAATAAAAHgAAAAgAAAAAAAAAbgBhAG0AZQAAADP/Mv8y/yH/Of80/yj/Nf8u/yT/Jf8y/zr/3jCwMOow6jD8MLkwAAAAAFNHTwACAQAAAQAAACAAAAABAAAALAAAAAAAAAA0AAAAAwAAABQAAAAeAAAACAAAAAAAAABuAGEAbQBlAAAAM/8y/zL/If85/zT/KP81/y7/JP8l/zL/Ov/qMO0w/DDHMKMw8zCwMAAAMAAxAAAASQBLAAAAYgBvAGQAeQAAAHIAZQBsAG8AYQBkAF8AZQBuAGQAAAByAGUAbABvAGEAZABfAGwAbwBvAHAAAAByAGUAbABvAGEAZABfAHMAdABhAHIAdAAAAHMAZQAAAHMAdABhAG4AZABiAHkAAAA="
           }
         }
       ]
@@ -555,11 +555,11 @@
       "value": [
         {
           "type": "string",
-          "value": "assault_recoil1"
+          "value": "sniper_recoil2"
         },
         {
           "type": "int",
-          "value": 1
+          "value": 0
         },
         {
           "type": "int",
@@ -578,17 +578,17 @@
         {
           "type": "string",
           "name": "Japanese",
-          "value": "ＡＦW"
+          "value": "ライサンダーＺ"
         },
         {
           "type": "string",
           "name": "English",
-          "value": "AF-W"
+          "value": "Lysander Z"
         },
         {
           "type": "string",
           "name": "Chinese",
-          "value": "ＡＦW"
+          "value": "ライサンダーＺ"
         }
       ]
     },
@@ -620,10 +620,11 @@
   ],
   "meta": {
     "help": "For examples of these values, open WEAPONTABLE.SGO and WEAPONTEXT.SGO",
-    "id": "ZD_Af_W",
-    "level": 80,
-    "category": 0,
+    "id": "Weapon077",
+    "level": null,
+    "category": null,
+    "unlockState": null,
     "dropRateModifier": null,
-    "description": "$AUTOSTATS$A special AF series model. This Assault rifle fires four bullets simultaneously in a fork pattern."
+    "description": "<font face=%dq%$FixedFont%dq% color=%dq%#ffffff%dq%>          Capacity: 10                          Zoom: 10x\n               ROF: 0.5/sec\n            Damage: 6000.0\n       Reload Time: 6.0sec\n             Range: 975.0m\n          Accuracy: S+\n<font face=%dq%$NormalFont%dq% color=%dq%#80c3f5%dq%>\nOnly eight of these rifles were ever made, and all of them were promptly sealed away, awaiting a sniper with the skills to be worthy of them."
   }
 }
