@@ -1,9 +1,17 @@
 Classes:
-  - Ranger gets a vehicle slot, all new vehicles are added to this category
-    based on the simpler Air Raider vehicles.
+  - Ranger gets a vehicle slot.
+    All new vehicles can be added to this category.
   - Air Raider can equip anything in all three of his slots.
 
-Weapons:
+Weapons Changes:
   - AF99-ST gets a 2.5x scope, increased clip capcity to 28,
     and reload time reduced to 2.5 seconds.
   - Fusion Blaster ZD can reload in the background. This takes 180 seconds.
+
+New Weapons:
+  - AF-W  | Assault Rifle
+    Lv 80, Dmg: 100x4, Cap: 160, Rof: 15.0, Rel: 2.0
+  - Dragon's Breath | Shotgun
+    Lv 90, Dmg: 120x10, Cap: 7, Rof: 1.0, Rel: 5.0, Incindenary
+  - Super Goliath | Rocket Launcher
+    Lv 82, Dmg: 7500, Cap: 2, Rof: 0.5, Rel: 5.0, Rad: 30
